[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
futures = "0.3.24"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.19", features = ["macros", "net", "rt-multi-thread"] }
tokio-serde = { version = "0.8.0", features = ["json"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
tracing = "0.1.36"
